--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,30 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Next.js build output
+.next
+
+# Production build output
+out
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS files
+Thumbs.db
+ehthumbs.db
+Icon?
+Desktop.ini
+
+# Windows system files
+*.lnk
+
+# npm package lock
+package-lock.json
+
+# Optional: yarn and pnpm lock files (if you use only npm)
+yarn.lock
+pnpm-lock.yaml
